--- a/src/components/grid-cell/GridCell.scss
+++ b/src/components/grid-cell/GridCell.scss
@@ -29,4 +29,8 @@
     background: url("../../assets/player/target.png") repeat;
     background-size: contain;
   }
+
+  &.visited {
+    background-color: blue;
+  }
 }
