--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -99,6 +99,7 @@
       width: 73%;
       border: 5px solid white;
       margin-right: 20px;
+      background: url("../assets/tiles/path_grey.png") repeat;
     }
   }
 }
