--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -55,6 +55,29 @@
       }
     }
 
+    .create-weights {
+      background: url("../assets/buttons/green_button_normal.png");
+      margin-right: 20px;
+      width: 190px;
+      height: 49px;
+      border: none;
+      margin: 0 30px;
+
+      &:hover {
+        opacity: 0.9;
+      }
+      &:focus {
+        outline: none;
+      }
+      &:active {
+        background: url("../assets/buttons/green_button_pressed.png");
+      }
+      &:disabled {
+        pointer-events: none;
+        opacity: 0.5;
+      }
+    }
+
     .clear-board {
       background: url("../assets/buttons/red_button_normal.png");
       margin-right: 20px;
