--- a/src/components/grid-cell/GridCell.scss
+++ b/src/components/grid-cell/GridCell.scss
@@ -3,9 +3,10 @@
   height: 30px;
   margin: 0;
   box-sizing: border-box;
+  cursor: pointer;
 
   &.grid-border {
-    border: 1px solid rgba(136, 136, 136, 0.2) !important;
+    border: 1px solid rgba(136, 136, 136, 0.5) !important;
   }
 
   &.floor {
@@ -13,7 +14,7 @@
     background-size: contain;
 
     &:hover {
-      border: 1px solid rgba(255, 255, 255, 1) !important;
+      //border: 1px solid rgba(255, 255, 255, 1) !important;
       cursor: pointer;
     }
   }
