--- a/src/components/grid/Grid.scss
+++ b/src/components/grid/Grid.scss
@@ -2,4 +2,6 @@
   border-collapse: collapse;
   width: 100%;
   height: 100%;
+  margin-bottom: 0;
+  background: url("../../assets/tiles/path_grey.png") repeat;
 }
