--- a/src/components/tutorial/Tutorial.scss
+++ b/src/components/tutorial/Tutorial.scss
@@ -1,43 +1,21 @@
-.info-panel {
+.tutorial {
   height: 100%;
   width: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
   flex-direction: column;
+  padding: 20px 5px 0 5px;
+  font-family: "Roboto", sans-serif;
+  color: white;
 
-  .title {
-    color: white;
-    text-align: center;
+  li {
+    margin-bottom: 10px;
+    font-size: 20px;
   }
 
-  select {
-    width: 200px;
-  }
-
-  .visualize-btn {
-    background: url("../../assets/buttons/yellow_button_normal.png");
-    width: 190px;
-    height: 49px;
-    border: none;
-    margin-top: 45px;
-
-    &:hover:not(:disabled) {
-      opacity: 0.9;
-
-      span.squirk {
-        color: rgb(100, 98, 98);
-      }
-    }
-    &:focus {
-      outline: none;
-    }
-    &:active:not(:disabled) {
-      background: url("../../assets/buttons/yellow_button_pressed.png");
-    }
-
-    &:disabled {
-      opacity: 0.5;
-    }
+  .emphasize {
+    color: blueviolet;
+    font-weight: bold;
   }
 }
