--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -33,53 +33,7 @@
     }
 
     .create-maze {
-      background: url("../assets/buttons/blue_button_normal.png");
-      margin-right: 20px;
-      width: 190px;
-      height: 49px;
-      border: none;
-      margin: 0 30px;
-
-      &:hover {
-        opacity: 0.9;
-      }
-      &:focus {
-        outline: none;
-      }
-      &:active {
-        background: url("../assets/buttons/blue_button_pressed.png");
-      }
-      &:disabled {
-        pointer-events: none;
-        opacity: 0.5;
-      }
-    }
-
-    .create-weights {
-      background: url("../assets/buttons/green_button_normal.png");
-      margin-right: 20px;
-      width: 190px;
-      height: 49px;
-      border: none;
-      margin: 0 30px;
-
-      &:hover {
-        opacity: 0.9;
-      }
-      &:focus {
-        outline: none;
-      }
-      &:active {
-        background: url("../assets/buttons/green_button_pressed.png");
-      }
-      &:disabled {
-        pointer-events: none;
-        opacity: 0.5;
-      }
-    }
-
-    .clear-board {
-      background: url("../assets/buttons/red_button_normal.png");
+      background: url("../assets/buttons/blue_button_normal.png") no-repeat;
       margin-right: 20px;
       width: fit-content;
       height: 49px;
@@ -93,7 +47,53 @@
         outline: none;
       }
       &:active {
-        background: url("../assets/buttons/red_button_pressed.png");
+        background: url("../assets/buttons/blue_button_pressed.png") no-repeat;
+      }
+      &:disabled {
+        pointer-events: none;
+        opacity: 0.5;
+      }
+    }
+
+    .create-weights {
+      background: url("../assets/buttons/green_button_normal.png") no-repeat;
+      margin-right: 20px;
+      width: fit-content;
+      height: 49px;
+      border: none;
+      margin: 0 30px;
+
+      &:hover {
+        opacity: 0.9;
+      }
+      &:focus {
+        outline: none;
+      }
+      &:active {
+        background: url("../assets/buttons/green_button_pressed.png") no-repeat;
+      }
+      &:disabled {
+        pointer-events: none;
+        opacity: 0.5;
+      }
+    }
+
+    .clear-board {
+      background: url("../assets/buttons/red_button_normal.png") no-repeat;
+      margin-right: 20px;
+      width: fit-content;
+      height: 49px;
+      border: none;
+      margin: 0 30px;
+
+      &:hover {
+        opacity: 0.9;
+      }
+      &:focus {
+        outline: none;
+      }
+      &:active {
+        background: url("../assets/buttons/red_button_pressed.png") no-repeat;
       }
       &:disabled {
         pointer-events: none;
@@ -114,7 +114,7 @@
 
   .bottom {
     width: 100%;
-    height: 86%;
+    min-height: 100vh;
     background-image: url("../assets/tiles/platformPack_tile004.png");
     background-repeat: repeat;
     position: absolute;
@@ -123,7 +123,6 @@
     display: flex;
     justify-content: space-between;
     .filter-container {
-      height: 100%;
       width: 100%;
       border: 5px solid white;
       border-radius: 40px;
@@ -138,7 +137,6 @@
     }
 
     .tutorial-container {
-      height: 100%;
       width: 100%;
       border: 5px solid white;
       border-radius: 40px;
@@ -153,11 +151,9 @@
     }
 
     .grid-container {
-      height: 90%;
-      width: 73%;
+      height: fit-content;
       border: 5px solid white;
       margin-right: 20px;
-      background: url("../assets/tiles/path_grey.png") repeat;
     }
   }
 }
