dijkstra bug fix, css bug fix, row count generation based on scrren height

--- a/src/components/grid-cell/GridCell.scss
+++ b/src/components/grid-cell/GridCell.scss
@@ -26,23 +26,26 @@
   &.player {
     background: url("../../assets/player/player.png") no-repeat;
     background-size: cover;
+    background-position: center;
   }
 
   &.target {
     background: url("../../assets/player/cherry.png") no-repeat;
     background-size: cover;
+    background-position: center;
   }
 
   &.weight {
     background: url("../../assets/tiles/weight.png") no-repeat;
     background-size: contain;
     width: 10px;
+    background-position: center;
   }
 
   &.visited {
     opacity: 1;
     animation-name: visited;
-    animation-duration: 1.5s;
+    animation-duration: 1.0s;
     animation-timing-function: ease-out;
     animation-direction: alternate;
     animation-iteration-count: 1;
@@ -53,7 +56,7 @@
   &.shortest-path {
     opacity: 1;
     animation-name: shortest-path;
-    animation-duration: 1.5s;
+    animation-duration: 1.0s;
     animation-timing-function: ease-out;
     animation-direction: alternate;
     animation-iteration-count: 1;
