--- a/src/components/legend/Legend.scss
+++ b/src/components/legend/Legend.scss
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: center;
     flex-direction: row;
+
     li {
       list-style: none;
       margin: 10px 20px;
@@ -25,6 +26,19 @@
         height: 30px;
         background-color: #e9e64f;
       }
+    }
+  }
+
+  @media (max-width: 1440px) {
+    ul {
+      justify-content: space-around;
+      padding: 0;
+      margin-top: 15px;
+    }
+
+    ul > li {
+      margin: 0;
+      padding: 0;
     }
   }
 }
