--- a/src/components/grid-cell/GridCell.scss
+++ b/src/components/grid-cell/GridCell.scss
@@ -26,13 +26,13 @@
   }
 
   &.player {
-    background: url("../../assets/player/player.png") no-repeat;
+    background: url("../../assets/player/cat.png") no-repeat;
     background-size: cover;
     background-position: center;
   }
 
   &.target {
-    background: url("../../assets/player/cherry.png") no-repeat;
+    background: url("../../assets/player/mouse.png") no-repeat;
     background-size: cover;
     background-position: center;
   }
